# Chess-vlm

./: .gitignore  README.md
app/: main.py  pyproject.toml  test.py
slm/: Makefile
slm/scripts/: generate_merged_model.py  push_model_to_hf.py
slm/src/app/: test.py
slm/src/instruct/: data.py  evaluate.py  game.py  model.py  trainer.py
vlm/: pyproject.toml
vlm/scripts/: generate_instructions.py
vlm/src/instruct/: checkpoints.py  config.py  infra.py  main.py  players.py  prompt_template.py
